# amistudio

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/AddFriends/: AddFriends.tsx
src/components/AmiDisplay/: AmiDisplay.css  AmiDisplay.tsx
src/components/AmiNameInput/: AmiNameInput.css  AmiNameInput.tsx
src/components/BackButton/: BackButton.css  BackButton.tsx
src/components/Banner/: Banner.css  Banner.tsx
src/components/Button/: Button.css  Button.tsx
src/components/ButtonGroup/: ButtonGroup.css  ButtonGroup.tsx
src/components/Error/: Error.tsx
src/components/GenderPreference/: GenderPreference.css  GenderPreference.tsx
src/components/Invitations/: Invitations.tsx
src/components/NextButton/: NextButton.css  NextButton.tsx
src/components/OptionSelector/: OptionSelector.css  OptionSelector.tsx
src/components/PageHeader/: PageHeader.css  PageHeader.tsx
src/components/StatsDisplay/: StatsDisplay.css  StatsDisplay.tsx
src/components/Textbox/: Textbox.css  Textbox.tsx
src/pages/: AmiCreation.tsx  Friends.tsx  Home.tsx  Login.tsx  MatchSimulation.tsx  Register.tsx  Showdowns.tsx
src/pages/AmiCreation/: Step1.tsx  Step2.tsx
